# mtp_labs

./: .gitignore  CMakeLists.txt
src/: common.h
src/cli-args/: Arguments.h  Parser.cpp  Parser.h  demo.cpp
src/lab1/: generate_data.py  main.cpp  tasks.h
src/lab1_v2/: main.cpp  tasks.h
src/lab2/: MatrixBuffer.cpp  MatrixBuffer.h  generate_data.py  main.cpp  strassen.cpp  strassen.h  tasks.h
src/mt/: Task.h  TaskGraph.cpp  TaskGraph.h
